terraform/modules/rds.tf
resource "aws_db_instance" "backend_db" {
  identifier = "cinemate-db"
  allocated_storage    = 20
  storage_type         = "gp2"
  engine               = "mysql"
  engine_version       = "8.0"
  instance_class       = "db.t3.micro"
  db_name                 = "cinemate"
  username             = "admin"
  password             = var.password
  parameter_group_name = "default.mysql8.0"
  db_subnet_group_name = aws_db_subnet_group.main.name
  vpc_security_group_ids = [aws_security_group.db.id]
  skip_final_snapshot = true

  tags = {
    Name = "cinemate"
  }
}
